# ----------------------------------------------------------------
# build system 构建系统
# ----------------------------------------------------------------
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ----------------------------------------------------------------
# project meta 项目元信息
# ----------------------------------------------------------------
[project]
name = "sirarm_utils"
version = "0.0.1"
description = ""
requires-python = ">=3.10"

# ----------------------------------------------------------------
# project generic dependencies 项目通用依赖
# ----------------------------------------------------------------
dependencies = [
    "pyyaml>=3.10",
    "tqdm>=4.67.1"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sirarm_utils*"]